@@ -54,55 +54,39 @@ public class TestAttemptController {
     @PostMapping("/submit")
     public ResponseEntity<?> submitTest(@RequestBody Map<String, Object> data) {
         try {
-            Integer testId = (Integer) data.get("testId");
+            Long attemptId = Long.valueOf(data.get("attemptId").toString());
             Map<String, Object> answers = (Map<String, Object>) data.get("answers");
 
-            Person currentUser = personRepository.findByEmail(getCurrentUserEmail())
-                    .orElseThrow(() -> new RuntimeException("Пользователь не найден"));
+            TestAttempt attempt = attemptRepository.findById(attemptId)
+                    .orElseThrow(() -> new RuntimeException("Попытка не найдена"));
 
-            log.info("Submitting test for user: {}, testId: {}", currentUser.getEmail(), testId);
+            log.info("Submitting attempt {}", attemptId);
 
-            List<TestAttempt> attempts = attemptRepository.findByTestIdAndPersonIdAndStatus(
-                    testId.longValue(), currentUser.getId_person(), TypeStatus.IN_PROGRESS
-            );
-
-            TestAttempt attempt;
-
-            if (attempts.isEmpty()) {
-                log.error("No active attempt found for test {} and user {}", testId, currentUser.getEmail());
-                throw new RuntimeException("Нет активной попытки для завершения");
-
-            } else if (attempts.size() > 1) {
-                log.warn("Found {} active attempts for test {} and user {}. Using first and cleaning others",
-                        attempts.size(), testId, currentUser.getEmail());
-
-                attempt = attempts.get(0);
-
-                for (int i = 1; i < attempts.size(); i++) {
-                    TestAttempt extraAttempt = attempts.get(i);
-                    extraAttempt.setStatus(TypeStatus.BLOCKED);
-                    attemptRepository.save(extraAttempt);
-                    log.info("Marked extra attempt {} as ERROR", extraAttempt.getId_attempt());
-                }
-
-            } else {
-                attempt = attempts.get(0);
-                log.debug("Found single active attempt: {}", attempt.getId_attempt());
+            if (attempt.getStatus() == TypeStatus.COMPLETED) {
+                log.warn("Attempt {} already completed", attemptId);
+                return ResponseEntity.ok(Map.of(
+                        "message", "Тест уже завершен",
+                        "attemptId", attempt.getId_attempt()
+                ));
             }
-
-            saveAnswers(answers, attempt, currentUser);
 
             attempt.setEnd_time(LocalDateTime.now());
             attempt.setStatus(TypeStatus.COMPLETED);
+
+            log.error("SETTING END TIME: {}", LocalDateTime.now());
             attemptRepository.save(attempt);
 
-            log.info("Test {} completed successfully for user {}", testId, currentUser.getEmail());
+            TestAttempt saved = attemptRepository.save(attempt);
+            log.error("SAVED END TIME FROM DB: {}", saved.getEnd_time());
 
-            Map<String, Object> response = new HashMap<>();
-            response.put("message", "Тест успешно завершен");
-            response.put("attemptId", attempt.getId_attempt());
+            saveAnswers(answers, attempt, attempt.getPersonAttempt());
 
-            return ResponseEntity.ok(response);
+            log.info("Attempt {} completed successfully", attemptId);
+
+            return ResponseEntity.ok(Map.of(
+                    "message", "Тест успешно завершен",
+                    "attemptId", attempt.getId_attempt()
+            ));
 
         } catch (Exception e) {
             log.error("Error submitting test: {}", e.getMessage(), e);
@@ -118,13 +102,15 @@ public class TestAttemptController {
 
             log.info("Starting test {} for user {}", testId, currentUser.getEmail());
 
-            List<TestAttempt> existingAttempts = attemptRepository.findByTestIdAndPersonIdAndStatus(
-                    testId, currentUser.getId_person(), TypeStatus.IN_PROGRESS
-            );
+            List<TestAttempt> existingAttempts = attemptRepository
+                    .findByTestIdAndPersonIdAndStatus(
+                            testId, currentUser.getId_person(), TypeStatus.IN_PROGRESS
+                    );
 
-            for (TestAttempt old : existingAttempts) {
-                old.setStatus(TypeStatus.BLOCKED);
-                attemptRepository.save(old);
+            if (!existingAttempts.isEmpty()) {
+                TestAttempt existing = existingAttempts.get(0);
+                log.warn("Returning existing IN_PROGRESS attempt {}", existing.getId_attempt());
+                return ResponseEntity.ok(existing);
             }
 
             TestAttempt attempt = new TestAttempt();
@@ -134,6 +120,7 @@ public class TestAttemptController {
             attempt.setTestAttempt(new Test(testId));
 
             TestAttempt savedAttempt = attemptRepository.save(attempt);
+
             log.info("Created new attempt {} for test {} and user {}",
                     savedAttempt.getId_attempt(), testId, currentUser.getEmail());
 
@@ -166,7 +153,6 @@ public class TestAttemptController {
             return ResponseEntity.badRequest().body(Map.of("error", e.getMessage()));
         }
     }
-
 
     @PostMapping("/save-progress/{attemptId}")
     public ResponseEntity<?> saveProgress(@PathVariable Long attemptId,
@@ -318,37 +304,22 @@ public class TestAttemptController {
 
             List<AttemptAnswer> attemptAnswers = attemptAnswerRepository.findByTestAttempt(attempt);
 
-            if (attemptAnswers.isEmpty()) {
-                log.warn("No answers found for attempt: {}", attemptId);
-                return ResponseEntity.ok(Map.of(
-                        "score", 0,
-                        "totalPoints", 0,
-                        "percentage", 0,
-                        "questions", new ArrayList<>(),
-                        "message", "Нет сохраненных ответов"
-                ));
-            }
-
-            int totalPoints = 0;
-            int score = 0;
-            List<Map<String, Object>> questionResults = new ArrayList<>();
+            List<Question> allQuestions = attempt.getTestAttempt().getQuestions();
 
             Map<Long, List<AttemptAnswer>> grouped = attemptAnswers.stream()
                     .collect(Collectors.groupingBy(a -> a.getMainQuestion().getId_question()));
 
-            for (Map.Entry<Long, List<AttemptAnswer>> entry : grouped.entrySet()) {
-                List<AttemptAnswer> userAnswers = entry.getValue();
+            int totalPoints = 0;
+            int score = 0;
 
-                if (userAnswers == null || userAnswers.isEmpty()) {
-                    log.warn("Empty user answers for question: {}", entry.getKey());
-                    continue;
-                }
+            List<Map<String, Object>> questionResults = new ArrayList<>();
 
-                Question question = userAnswers.get(0).getMainQuestion();
-                if (question == null) {
-                    log.warn("Question is null for answer group: {}", entry.getKey());
-                    continue;
-                }
+            for (Question question : allQuestions) {
+
+                List<AttemptAnswer> userAnswers = grouped.getOrDefault(
+                        question.getId_question(),
+                        new ArrayList<>()
+                );
 
                 totalPoints += question.getPoints();
 
@@ -358,39 +329,40 @@ public class TestAttemptController {
 
                 boolean isCorrect = false;
 
-                try {
-                    if ("SINGLE".equals(question.getType_question().name())) {
-                        if (userAnswers.get(0) != null && userAnswers.get(0).getMainAnswer() != null) {
-                            isCorrect = userAnswers.get(0).getMainAnswer().getIs_correct();
-                        } else {
-                            log.warn("No answer found for SINGLE question: {}", question.getId_question());
-                        }
-                    } else if ("MULTIPLE".equals(question.getType_question().name())) {
-                        if (!userAnswers.isEmpty() && !correctAnswers.isEmpty()) {
+                if (!userAnswers.isEmpty()) {
+                    try {
+                        if ("SINGLE".equals(question.getType_question().name())) {
+
+                            if (userAnswers.get(0).getMainAnswer() != null) {
+                                isCorrect = userAnswers.get(0).getMainAnswer().getIs_correct();
+                            }
+
+                        } else if ("MULTIPLE".equals(question.getType_question().name())) {
+
                             List<Long> userIds = userAnswers.stream()
-                                    .filter(a -> a != null && a.getMainAnswer() != null)
+                                    .filter(a -> a.getMainAnswer() != null)
                                     .map(a -> a.getMainAnswer().getId_answer())
-                                    .collect(Collectors.toList());
+                                    .toList();
 
                             List<Long> correctIds = correctAnswers.stream()
                                     .map(Answer::getId_answer)
-                                    .collect(Collectors.toList());
+                                    .toList();
 
                             isCorrect = userIds.containsAll(correctIds) && correctIds.containsAll(userIds);
-                        } else {
-                            log.warn("No answers or correct answers for MULTIPLE question: {}", question.getId_question());
-                        }
-                    } else if ("TEXT".equals(question.getType_question().name())) {
-                        if (userAnswers.get(0) != null && !correctAnswers.isEmpty()) {
+
+                        } else if ("TEXT".equals(question.getType_question().name())) {
+
                             String userText = userAnswers.get(0).getText_answer();
-                            String correctText = correctAnswers.get(0).getAnswer_text();
-                            isCorrect = userText != null && correctText != null && userText.equalsIgnoreCase(correctText);
-                        } else {
-                            log.warn("No text answer or correct answer for TEXT question: {}", question.getId_question());
+                            String correctText = correctAnswers.isEmpty() ? null : correctAnswers.get(0).getAnswer_text();
+
+                            isCorrect = userText != null
+                                    && correctText != null
+                                    && userText.equalsIgnoreCase(correctText);
                         }
+
+                    } catch (Exception e) {
+                        log.error("Error processing question {}: {}", question.getId_question(), e.getMessage());
                     }
-                } catch (Exception e) {
-                    log.error("Error processing question {}: {}", question.getId_question(), e.getMessage());
                 }
 
                 if (isCorrect) {
@@ -402,25 +374,41 @@ public class TestAttemptController {
                 qResult.put("questionText", question.getQuestion_text());
                 qResult.put("correct", isCorrect);
 
-                List<String> userAnswerTexts = userAnswers.stream()
-                        .map(a -> {
-                            if (a == null) return "Нет ответа";
-                            if (a.getMainAnswer() != null) return a.getMainAnswer().getAnswer_text();
-                            if (a.getText_answer() != null) return a.getText_answer();
-                            return "Нет ответа";
-                        })
-                        .collect(Collectors.toList());
+                List<String> userAnswerTexts;
+
+                if (userAnswers.isEmpty()) {
+                    userAnswerTexts = List.of("Нет ответа");
+                } else {
+                    userAnswerTexts = userAnswers.stream()
+                            .map(a -> {
+                                if (a.getMainAnswer() != null) return a.getMainAnswer().getAnswer_text();
+                                if (a.getText_answer() != null) return a.getText_answer();
+                                return "Нет ответа";
+                            })
+                            .toList();
+                }
+
                 qResult.put("userAnswer", userAnswerTexts);
 
                 List<String> correctAnswerTexts = correctAnswers.stream()
                         .map(Answer::getAnswer_text)
-                        .collect(Collectors.toList());
-                qResult.put("correctAnswers", correctAnswerTexts.isEmpty() ? List.of("Нет правильного ответа") : correctAnswerTexts);
+                        .toList();
+
+                qResult.put("correctAnswers",
+                        correctAnswerTexts.isEmpty()
+                                ? List.of("Нет правильного ответа")
+                                : correctAnswerTexts
+                );
 
                 questionResults.add(qResult);
             }
 
             int percentage = totalPoints == 0 ? 0 : (score * 100 / totalPoints);
+
+            attempt.setScore(score);
+            attempt.setTotal_points(totalPoints);
+            attempt.setPercentage(percentage);
+            attemptRepository.save(attempt);
 
             Map<String, Object> response = Map.of(
                     "score", score,
@@ -429,12 +417,16 @@ public class TestAttemptController {
                     "questions", questionResults
             );
 
-            log.info("Result calculated: score={}, totalPoints={}, percentage={}", score, totalPoints, percentage);
+            log.info("Result calculated: score={}, totalPoints={}, percentage={}",
+                    score, totalPoints, percentage);
+
             return ResponseEntity.ok(response);
 
         } catch (Exception e) {
             log.error("Error getting result for attempt {}: {}", attemptId, e.getMessage(), e);
-            return ResponseEntity.status(500).body(Map.of("error", "Ошибка при получении результатов: " + e.getMessage()));
+            return ResponseEntity.status(500).body(Map.of(
+                    "error", "Ошибка при получении результатов: " + e.getMessage()
+            ));
         }
     }
 
